--- a/chat.html
+++ b/chat.html
@@ -19,6 +19,8 @@
                 <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="schedule.html" class="nav-link">Schedule</a></li>
                 <li><a href="events.html" class="nav-link">Events</a></li>
+                <li><a href="teachers.html" class="nav-link">Teachers</a></li>
+                <li><a href="onduty.html" class="nav-link">On Duty</a></li>
                 <li><a href="buses.html" class="nav-link">Buses</a></li>
                 <li><a href="announcements.html" class="nav-link">Announcements</a></li>
                 <li><a href="chat.html" class="nav-link active">Chat</a></li>
