--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 <li><a href="index.html" class="nav-link active">Home</a></li>
                 <li><a href="schedule.html" class="nav-link">Schedule</a></li>
                 <li><a href="events.html" class="nav-link">Events</a></li>
+                <li><a href="teachers.html" class="nav-link">Teachers</a></li>
+                <li><a href="onduty.html" class="nav-link">On Duty</a></li>
                 <li><a href="buses.html" class="nav-link">Buses</a></li>
                 <li><a href="announcements.html" class="nav-link">Announcements</a></li>
                 <li><a href="chat.html" class="nav-link">Chat</a></li>
@@ -102,6 +104,21 @@
                 <h3>Admin Panel</h3>
                 <p>Manage campus information</p>
                 <a href="admin.html">Admin Access →</a>
+            </div>
+            <!-- Teachers Card -->
+            <div class="feature-card">
+                <div class="feature-icon">📍</div>
+                 <h3>Teacher Location</h3>
+                 <p>Find where your faculty is currently seated.</p>
+                 <a href="teachers.html" class="feature-btn">View Now</a>
+            </div>
+
+<!-- On Duty Card -->
+            <div class="feature-card">
+                   <div class="feature-icon">📝</div>
+                   <h3>On Duty Request</h3>
+                   <p>Submit and track your on-duty permissions.</p>
+                   <a href="onduty.html" class="feature-btn">Apply Now</a>
             </div>
         </div>
     </section>
